# KusDepot

./: .dockerignore  .mcp.json  Directory.Build.props  Directory.Packages.props  KusDepot.Fabric.ps1  KusDepot.ps1  KusDepot.sln  LICENSE  NuGet.config  Readme.md  azure-pipelines.yml  global.json
AD/: AD.csproj  Dockerfile  Main.cs
Ark/: Ark.csproj  ArkKeeper.cs  Config.cs  Diagnostics.cs  StartUp.cs  Strings.cs  Usings.cs
Blob/: Blob.cs  Blob.csproj  Config.cs  Diagnostics.cs  Settings.cs  StartUp.cs  Strings.cs  Usings.cs
Catalog/: Catalog.csproj  StartUp.cs  Strings.cs  Usings.cs
CatalogDB/: CatalogDB.csproj  Dockerfile  Settings.cs  StartUp.cs  Strings.cs  Usings.cs
CmdletPS/: CmdletPS.csproj  ToolCmdlet.cs  Usings.cs
Command/: Command.csproj  ToolCommandLine.cs  Usings.cs
CoreCache/: Config.cs  CoreCache.cs  CoreCache.csproj  Diagnostics.cs  Dockerfile  Settings.cs  StartUp.cs  Strings.cs  Usings.cs
DaprActors/: DaprActors.csproj  Strings.cs  Usings.cs
DaprSidecar/: DaprSidecar.csproj  DaprSidecar.sfproj  NativeMethods.txt  StartupServices.xml  Strings.cs  Usings.cs
DataConfigs/: Config.cs  DataConfigs.cs  DataConfigs.csproj  Diagnostics.cs  Settings.cs  StartUp.cs  Strings.cs  Usings.cs
DataControl/: DataControl.csproj  Settings.cs  StartUp.cs  Strings.cs  Usings.cs
DataServices/: DataServices.csproj  Usings.cs
DepotClients/: Strings.cs  (+3 more)
ReactR/: .dockerignore  Build.cs  Cargo.toml  Dockerfile  ReactR.csproj  build.rs
ReactR/src/: lib.rs  main.rs
ReactR/src/shapesvcs/: grpcservice.rs  mod.rs  shapeapi.rs  shapeapinterop.rs  toolshape.rs
(+1653 files in other folders)
