[package]
name = "KusDepot-ReactR"
version = "0.0.1"
edition = "2024"

[lib]
name = "kusdepot_reactr"
crate-type = ["cdylib"]

[dependencies]
anyhow = "^1.0.99"
axum = "^0.8.4"
env_logger = "^0.11.8"
log = "^0.4.27"
prost = "^0.14.1"
rand = "^0.9.2"
serde = { version = "^1.0.219", features = ["derive"] }
tokio = { version = "^1.47.1", features = ["rt-multi-thread", "macros"] }
tonic = "^0.14.1"
tonic-prost = "^0.14.1"
uuid = { version = "^1.18", features = ["serde" , "v4"] }

[build-dependencies]
tonic-prost-build = "^0.14.1"